--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div *ngFor="let livro of livros">
-    <h3>{{ livro.title }}</h3>
-</div>
+<table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Título</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let livro of livros">
+        <td>{{ livro.id }}</td>
+        <td>{{ livro.title }}</td>
+      </tr>
+    </tbody>
+  </table>
