fix: corrigido app component html e ts ao adicionar o livros-tabela component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<table>
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Título</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let livro of livros">
-        <td>{{ livro.id }}</td>
-        <td>{{ livro.title }}</td>
-      </tr>
-    </tbody>
-  </table>
+<app-livros-tabela />
