feat: add campo 'ano' na tabela

--- a/src/app/components/livros-tabela/livros-tabela.component.html
+++ b/src/app/components/livros-tabela/livros-tabela.component.html
@@ -3,12 +3,14 @@
       <tr>
         <th>ID</th>
         <th>Título</th>
+        <th>Ano</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let livro of livros">
         <td>{{ livro.id }}</td>
         <td>{{ livro.title }}</td>
+        <td>{{ livro.year }}</td>
       </tr>
     </tbody>
   </table>
