feat: edição no html em livros-tabela e adição de estilos em styles e livros-tabela scss

--- a/src/app/components/livros-tabela/livros-tabela.component.html
+++ b/src/app/components/livros-tabela/livros-tabela.component.html
@@ -1,16 +1,20 @@
-<table>
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Título</th>
-        <th>Ano</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let livro of livros">
-        <td>{{ livro.id }}</td>
-        <td>{{ livro.title }}</td>
-        <td>{{ livro.year }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container">
+  <div class="content-container">
+    <table class="table-wp">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Título</th>
+          <th>Ano</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let livro of livros">
+          <td>{{ livro.id }}</td>
+          <td>{{ livro.title }}</td>
+          <td>{{ livro.year }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
