--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-*{
+body, html{
+    display: block;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: rgb(23, 25, 34);
+}
+
+.container{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.content-container {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    background-color: rgb(211, 211, 211);
+    border-radius: 10px;
+    margin-top: 10%;
 }
