--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-livros-tabela />
+<div class="container">
+    <div class="content-container">
+        <app-titulo />
+        <app-livros-tabela />
+    </div>
+</div>
