--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ body, html{
 }
 
 .content-container {
-    display: flex;
+    display: block;
     width: 50%;
     justify-content: center;
     background-color: rgb(211, 211, 211);
