feat: add new collumn in a table

--- a/src/app/components/livros-tabela/livros-tabela.component.scss
+++ b/src/app/components/livros-tabela/livros-tabela.component.scss
@@ -1,11 +1,12 @@
 .table-wp {
-    border-collapse: collapse;
-    width: 60%;
-    margin: 5%;
-    
-    th, td {
-        border: 1px solid black;
-        padding: 8px;
-        text-align: center;
-    }
+  border-collapse: collapse;
+  width: 60%;
+  margin: 5%;
+
+  th,
+  td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+  }
 }
