--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -1,1 +1,3 @@
-<button class="add-book"><i class="fa-solid fa-plus"></i> Adicionar</button>
+<button class="add-book" (click)="onAddBook()">
+  <i class="fa-solid fa-plus"></i> Adicionar
+</button>
