feat: added method to redisplay the table.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     <app-titulo />
     <app-add-book (addBook)="onAddBook()" />
     <app-livros-tabela *ngIf="!isAddingBook" />
-    <app-add-book-form *ngIf="isAddingBook" />
+    <app-add-book-form *ngIf="isAddingBook" (bookAdded)="onBookAdded()" />
   </div>
 </div>
