--- a/src/app/components/add-book-form/add-book-form.component.html
+++ b/src/app/components/add-book-form/add-book-form.component.html
@@ -1,50 +1,48 @@
 <div class="container">
-  <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="bookForm" (ngSubmit)="onSubmit()" class="form-container">
     <div class="form-group">
-      <label for="title">Título</label>
       <input
         id="title"
         formControlName="title"
         type="text"
-        class="form-control"
+        class="form-control input-form"
+        [ngClass]="{
+          'is-invalid':
+            bookForm.get('title')?.invalid && bookForm.get('title')?.touched
+        }"
+        required
       />
-      <div
-        *ngIf="bookForm.get('title')?.invalid && bookForm.get('title')?.touched"
-      >
-        <small class="text-danger">Título é obrigatório</small>
-      </div>
+      <label for="title">Título</label>
     </div>
+
     <div class="form-group">
-      <label for="year">Ano</label>
       <input
         id="year"
         formControlName="year"
         type="text"
-        class="form-control"
+        class="form-control input-form"
+        [ngClass]="{
+          'is-invalid':
+            bookForm.get('year')?.invalid && bookForm.get('year')?.touched
+        }"
+        required
       />
-      <div
-        *ngIf="bookForm.get('year')?.invalid && bookForm.get('year')?.touched"
-      >
-        <small class="text-danger"
-          >Ano é obrigatório e deve ter 4 dígitos</small
-        >
-      </div>
+      <label for="year">Ano</label>
     </div>
+
     <div class="form-group">
-      <label for="author">Autor</label>
       <input
         id="author"
         formControlName="author"
         type="text"
-        class="form-control"
+        class="form-control input-form"
+        [ngClass]="{
+          'is-invalid':
+            bookForm.get('author')?.invalid && bookForm.get('author')?.touched
+        }"
+        required
       />
-      <div
-        *ngIf="
-          bookForm.get('author')?.invalid && bookForm.get('author')?.touched
-        "
-      >
-        <small class="text-danger">Autor é obrigatório</small>
-      </div>
+      <label for="author">Autor</label>
     </div>
 
     <button type="submit" class="btn btn-primary" [disabled]="bookForm.invalid">
